# openenv-email-triage

./: Dockerfile  README.md  baseline_results.json  client.py  dataset.py  environment.py  grader.py  inference.py  models.py  openenv.yaml  pyproject.toml  server.py  validate.py
baseline/: baseline_results.json  run_baseline.py
openenv_email_triage.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
outputs/: baseline_results.json
server/: app.py
src/openenv_email_triage/: __init__.py  environment.py  grader.py
src/openenv_email_triage.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_environment.py
ui/: index.html
